tests/invalid/tuple_genexpr_wrong_annotation/main.py
def main() -> None:
    t: list[int] = tuple(i for i in range(3))
    print(t)
